# kibble-rs

./: Cargo.toml
src/: main.rs
src/game/: mod.rs
src/game/maze/: cell.rs  coordinates.rs  get_maze.rs  mod.rs
